test with kc.mega.BeepBoop, JDK 21